--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/uuid": "^10.0.0",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3"
   },
@@ -19,8 +21,10 @@
     "@nuxt/fonts": "^0.10.0",
     "@nuxt/icon": "^1.5.6",
     "@sidebase/nuxt-auth": "^0.9.3",
+    "bcryptjs": "^2.4.3",
     "nuxt": "^3.13.0",
     "sass": "^1.80.1",
+    "uuid": "^10.0.0",
     "vue": "latest",
     "vue-router": "latest"
   }
