--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "drizzle-orm": "^0.36.1",
     "nuxt": "^3.13.2",
     "sass": "^1.80.6",
+    "unenv": "^1.10.0",
     "uuid": "^10.0.0",
     "vue": "latest",
     "vue-router": "latest"
