--- a/package.json
+++ b/package.json
@@ -13,27 +13,30 @@
     "db:generate": "drizzle-kit generate"
   },
   "devDependencies": {
-    "@iconify-json/material-symbols": "^1.2.6",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/uuid": "^10.0.0",
-    "drizzle-kit": "^0.28.0",
-    "prettier": "^3.3.3",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "typescript": "^5.6.3",
-    "wrangler": "^3.85.0"
+    "@iconify-json/material-symbols": "1.2.7",
+    "@types/bcryptjs": "2.4.6",
+    "@types/uuid": "10.0.0",
+    "drizzle-kit": "0.28.1",
+    "prettier": "3.3.3",
+    "prettier-plugin-organize-imports": "4.1.0",
+    "typescript": "5.6.3",
+    "wrangler": "3.87.0"
   },
   "dependencies": {
-    "@nuxt/fonts": "^0.10.2",
-    "@nuxt/icon": "^1.6.1",
-    "@nuxthub/core": "^0.8.6",
-    "@sidebase/nuxt-auth": "^0.9.4",
-    "bcryptjs": "^2.4.3",
-    "drizzle-orm": "^0.36.1",
-    "nuxt": "^3.13.2",
-    "sass": "^1.80.6",
-    "unenv": "^1.10.0",
-    "uuid": "^10.0.0",
-    "vue": "latest",
-    "vue-router": "latest"
-  }
+    "@nuxt/fonts": "0.10.2",
+    "@nuxt/icon": "1.7.5",
+    "@nuxthub/core": "0.8.7",
+    "@sidebase/nuxt-auth": "0.9.4",
+    "bcryptjs": "2.4.3",
+    "drizzle-orm": "0.36.3",
+    "nuxt": "3.14.159",
+    "sass": "1.81.0",
+    "unenv": "1.10.0",
+    "uuid": "11.0.3",
+    "vue": "3.5.13",
+    "vue-router": "4.4.5"
+  },
+  "trustedDependencies": [
+    "@parcel/watcher"
+  ]
 }
