--- a/package.json
+++ b/package.json
@@ -13,34 +13,36 @@
     "db:generate": "drizzle-kit generate"
   },
   "devDependencies": {
-    "@iconify-json/material-symbols": "1.2.7",
+    "@iconify-json/material-symbols": "1.2.12",
     "@types/bcryptjs": "2.4.6",
     "@types/uuid": "10.0.0",
-    "drizzle-kit": "0.28.1",
-    "prettier": "3.3.3",
+    "drizzle-kit": "0.30.1",
+    "prettier": "3.4.2",
     "prettier-plugin-organize-imports": "4.1.0",
-    "typescript": "5.6.3",
-    "wrangler": "3.88.0"
+    "typescript": "5.7.2",
+    "wrangler": "3.99.0"
   },
   "dependencies": {
-    "@nuxt/fonts": "0.10.2",
-    "@nuxt/icon": "1.8.1",
-    "@nuxthub/core": "0.8.7",
-    "@sidebase/nuxt-auth": "0.9.4",
+    "@nuxt/fonts": "0.10.3",
+    "@nuxt/icon": "1.10.3",
+    "@nuxthub/core": "0.8.10",
+    "@sidebase/nuxt-auth": "0.10.0",
     "bcryptjs": "2.4.3",
-    "drizzle-orm": "0.36.3",
-    "naive-ui": "^2.40.1",
-    "nuxt": "3.14.159",
+    "drizzle-orm": "0.38.3",
+    "naive-ui": "^2.40.4",
+    "nuxt": "3.15.0",
     "nuxtjs-naive-ui": "1.0.2",
-    "sass": "1.81.0",
+    "sass": "1.83.0",
     "unenv": "1.10.0",
-    "unplugin-auto-import": "0.18.5",
-    "unplugin-vue-components": "0.27.4",
+    "unplugin-auto-import": "0.19.0",
+    "unplugin-vue-components": "0.28.0",
     "uuid": "11.0.3",
     "vue": "3.5.13",
-    "vue-router": "4.4.5"
+    "vue-router": "4.5.0"
   },
   "trustedDependencies": [
-    "@parcel/watcher"
+    "@parcel/watcher",
+    "esbuild",
+    "workerd"
   ]
 }
