--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "prettier-plugin-organize-imports": "4.1.0",
     "typescript": "5.8.3",
     "vueuc": "^0.4.64",
-    "wrangler": "4.7.2"
+    "wrangler": "4.8.0"
   },
   "dependencies": {
+    "@google-cloud/text-to-speech": "^6.0.1",
     "@nuxt/fonts": "0.11.1",
     "@nuxt/icon": "1.11.0",
     "@nuxthub/core": "0.8.23",
@@ -41,6 +42,7 @@
   "trustedDependencies": [
     "@parcel/watcher",
     "esbuild",
+    "protobufjs",
     "sharp",
     "workerd"
   ],
