--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "naive-ui": "^2.41.0",
     "nuxt": "3.16.2",
     "nuxtjs-naive-ui": "1.0.2",
+    "readable-stream": "^4.7.0",
     "sass": "1.86.3",
     "unenv": "1.10.0",
     "uuid": "11.1.0",
