--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/uuid": "10.0.0",
     "drizzle-kit": "0.30.6",
     "prettier": "3.5.3",
-    "prettier-plugin-organize-imports": "4.1.0",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "typescript": "5.8.3",
     "vueuc": "^0.4.64",
     "wrangler": "4.8.0"
