--- a/package.json
+++ b/package.json
@@ -20,24 +20,25 @@
     "prettier-plugin-organize-imports": "^4.1.0",
     "typescript": "5.8.3",
     "vueuc": "^0.4.64",
-    "wrangler": "4.12.0"
+    "wrangler": "4.13.2"
   },
   "dependencies": {
-    "@nuxt/fonts": "0.11.1",
+    "@nuxt/fonts": "0.11.2",
     "@nuxt/icon": "1.12.0",
-    "@nuxthub/core": "0.8.24",
+    "@nuxthub/core": "0.8.25",
+    "@nuxtjs/mdc": "0.17.0",
     "@sidebase/nuxt-auth": "0.10.1",
     "bcryptjs": "3.0.2",
-    "drizzle-orm": "0.42.0",
+    "drizzle-orm": "0.43.1",
     "naive-ui": "^2.41.0",
-    "nuxt": "3.16.2",
+    "nuxt": "3.17.1",
     "nuxtjs-naive-ui": "1.0.2",
     "readable-stream": "^4.7.0",
-    "sass": "1.86.3",
+    "sass": "1.87.0",
     "unenv": "1.10.0",
     "uuid": "11.1.0",
     "vue": "3.5.13",
-    "vue-router": "4.5.0"
+    "vue-router": "4.5.1"
   },
   "trustedDependencies": [
     "@parcel/watcher",
